--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <title>Задача «TXT2HTML»</title>
 </head>
 <body>
-    <h1>Блог компании Яндекс.</h1>
-    <h2>ЯНДЕКС.ПОЧТА: КАК МЫ ИЗМЕРЯЕМ СКОРОСТЬ ЗАГРУЗКИ И УЛУЧШАЕМ ЕЁ</h2>
-    
-    <p>Если ваш сайт медленно грузится, вы рискуете тем, что люди не оценят ни то,
+    <header>
+        <h1>Блог компании Яндекс.</h1>
+        <h2>ЯНДЕКС.ПОЧТА: КАК МЫ ИЗМЕРЯЕМ СКОРОСТЬ ЗАГРУЗКИ И УЛУЧШАЕМ ЕЁ</h2>
+    </header>
+    <article>Если ваш сайт медленно грузится, вы рискуете тем, что люди не оценят ни то,
             какой он красивый, ни то, какой он удобный. Никому не понравится, когда все
             тормозит. Мы регулярно добавляем в Яндекс.Почту новую функциональность,
             иногда — исправляем ошибки, а это значит, у нас постоянно появляются новый код
-            и новая логика. Всё это напрямую влияет на скорость работы интерфейса.</p>
+            и новая логика. Всё это напрямую влияет на скорость работы интерфейса.</article>
 
+    <main>
     <h3>Что мы измеряем</h3>
     <ul>
         <li>подготовка;</li>
@@ -37,7 +39,7 @@
     <p>—<q>А давай построим график!</q> - отвечаем мы</p>
     <p>—<q>А что будем считать?</q> - уточняете вы</p>
 
-    <p>Как вы знаете, медиана – это серединное, а не среднее значение в выборке.
+    <p>Как вы знаете, <dfn>медиана</dfn> – это серединное, а не среднее значение в выборке.
     Если у нас имеются числа <em>1, 2, 2, 3, 8, 10, 20</em>, то медиана – <em>3</em>, 
     а среднее – <em>6,5</em>.
     В общем случае медиана отлично показывает, сколько грузится средний пользователь.</p>
@@ -45,7 +47,8 @@
     <p>В случае ускорения или замедления медиана, конечно, изменится. Но она не может
             рассказать, сколько пользователей ускорилось, а сколько замедлилось.</p>
 
-    <p><strong>APDEX</strong> – метрика, которая сразу говорит: хорошо или плохо. Метрика
+    <p><strong><mark><abbr title="Application Performance Index">APDEX</abbr></mark></strong>
+        – метрика, которая сразу говорит: хорошо или плохо. Метрика
             работает очень просто. Мы выбираем временной интервал [0; t], такой, что если
             время показа страницы попало в него, то пользователь счастлив. Берем еще один
             интервал, (t; 4t] (в четыре раза больше первого), и считаем, что если страница
@@ -104,8 +107,8 @@
     <p>- VCDiff</p>
     <p>- google-diff-patch-match</p>
 
-    <p>Для окончательного выбора библиотеки нам нужно сравнить:</p>
     <table>
+        <caption>Для окончательного выбора библиотеки нам нужно сравнить:</caption>
         <tr>
             <td>Библиотека</td>
             <td>IE 9</td>
@@ -160,14 +163,23 @@
     <p>Потому что он быстрый, компактный и легок в реализации.</p>
     <code>
         Дано: &Epsilon;, <em>x<sub>0</sub></em><br>
-        инициализировать<em>H<sub>0</sub></em><br>
+        инициализировать <em>H<sub>0</sub></em><br>
         <em>k</em> = 0;<br>
-        Найти направление <em>p<sub>k</sub></em> = -<em>C<sub>k</sub>▽f<sub>k</sub></em><br>
-        
+        <strong>while</strong>||▽f<sub>k</sub>||&Epsilon;<br>
+
+        найти направление <em>p<sub>k</sub></em> = -<em>C<sub>k</sub>▽f<sub>k</sub></em><br>
+        вычислить <em>x<sub>k+1</sub> = x<sub>k</sub> + &alpha;p<sub>k</sub>
+                , &alpha;<sub>k</sub></em> удовлетворяет условиям Вольфе<br>
+        обозначить <em>s<sub>k</sub> = x<sub>k+1</sub> - x<sub>k</sub></em>
+        и <em>y<sub>k</sub> = ▽f<sub>k+1</sub> - ▽f<sub>k</sub></em><br>
+        вычислить <em>C<sub>k+1</sub></em><br>
+        <em>k = k + 1</em><br>
+        <strong>end</strong>
     </code>
     <p>Итог</p>
-    <p>Фактически мы экономим 80-90% трафика. Размер загружаемой статитки в байтах:</p>
+    <p>Фактически мы экономим 80-90% трафика.</p>
     <table>
+        <caption>Размер загружаемой статитки в байтах:</caption>
         <tr>
             <td>Релиз</td>
             <td>С патчем</td>
@@ -189,11 +201,14 @@
             <td>3 995</td>
         </tr>
     </table>
+    </main>
+    <footer>
     <p>Автор: @doochik</p>
     <p>С++ разработик</p>
     <p>Электронная почта: (<a href="mailto:doochik@yandex-team.ru">doochik@yandex-team.ru</a>)</p>
     <p>Компания: Яндекс</p>
     <br>
+    <hr>
     <h3>Комментарии (3):</h3>
     <h4>- Mogaika (mogaika@yandex-team.ru) 30 ноября 2014 в 17:05</h4>
     <p>А можете привести сравнение, на сколько быстрее грузится lite версия?</p>
@@ -213,5 +228,6 @@
     <p>Мы измеряем скорость загрузки с помощью Яндекс.Метрики: 
         help.yandex.ru/metrika/reports/monitoring_timing.xml</p>
 
+    </footer>
 </body>
 </html>
